--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
     </div>
 
     <div class="buttons">
-        <button onclick="window.location.href='http://localhost/nancy/s1.php'">Sorpresa de Nancy</button>
-        <button onclick="window.location.href='http://localhost/nancy/s2.php'">Sorpresa de Nancy 2</button>
-        <button onclick="window.location.href='http://localhost/nancy/s3.php'">Sorpresa en proceso</button>
+        <button onclick="window.location.href='./s1.php'">Sorpresa de Nancy</button>
+        <button onclick="window.location.href='./s2.php'">Sorpresa de Nancy 2</button>
+        <button onclick="window.location.href='./s3.php'">Sorpresa en proceso</button>
     </div>
     <footer>
         <p>&copy; 2024 NANCY. Todos los derechos reservados.</p>
