--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
 
     <div class="buttons">
-        <button onclick="window.window.location.href='s1.php'">Sorpresa de Nancy</button>
+        <button onclick="window.window.location.href='s1.html'">Sorpresa de Nancy</button>
         <button onclick="window.location.href='./s2.php'">Sorpresa de Nancy 2</button>
         <button onclick="window.location.href='./s3.php'">Sorpresa en proceso</button>
     </div>
