Update and rename mensaje_secreto.php to mensaje_secreto.html

--- a/mensaje_secreto.html
+++ b/mensaje_secreto.html
@@ -92,7 +92,7 @@
         <p>Espero tu respuesta con el corazón en la mano. 😊</p>
 
         <!-- Ejemplo de botón de regresar -->
-        <a href="http://localhost/nancy/index.html" class="btn-regresar">Regresar</a>
+       <a href="index.html" class="btn-regresar">Regresar</a>
     </div>
 
     <footer>
