--- a/s3.html
+++ b/s3.html
@@ -80,7 +80,7 @@
         <h2>¡Hola, mi Princesa 👸!</h2>
         <p><span class="romantic">Me gustas más que a ninguna otra persona en el mundo</span> y tengo una sorpresa especial para ti. ¿Estás lista para descubrirla?</p>
         <p>Haz clic en el siguiente enlace para conocer la sorpresa:</p>
-        <a href="mensaje_secreto.html">¡Descubre la sorpresa!</a>
+        <p><a href="mensaje_secreto.php">¡Descubre la sorpresa!</a></p>
 
     </div>
 
