--- a/s1.html
+++ b/s1.html
@@ -114,7 +114,7 @@
         </div>
     </div>
     <br> <br/>
-    <button onclick="window.location.href='https://lozanojhone.github.io/ejemplo1/'"> regresar </button> <br> <br/>
+   <button onclick="location.href='https://lozanojhone.github.io/ejemplo1/'">Regresar</button>
     <footer>
         Con todo mi amor, desde la distancia, te amo.
     </footer>
