--- a/s1.html
+++ b/s1.html
@@ -114,7 +114,8 @@
         </div>
     </div>
     <br> <br/>
-   <button onclick="location.href='https://lozanojhone.github.io/ejemplo1/'">Regresar</button>
+  <a href="https://lozanojhone.github.io/ejemplo1/" style="text-decoration: none; padding: 10px 20px; background-color: #f5881b; color: white; border-radius: 5px;">Regresar</a>
+
     <footer>
         Con todo mi amor, desde la distancia, te amo.
     </footer>
