Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <script>
 function login() {
   const usuarioCorrecto = "admin"; // usuario válido
-  const contrasenaCorrecta = "passwar01"; // contraseña válida
+  const contrasenaCorrecta = "04/12/2025"; // contraseña válida
   const usuario = document.getElementById("usuario").value.trim();
   const contrasena = document.getElementById("contrasena").value.trim();
   const msgDiv = document.getElementById("mensaje");
@@ -126,3 +126,4 @@ function login() {
 </body>
 
 </html>
+
