Refactor menu.html with updated styles and links

--- a/menu.html
+++ b/menu.html
@@ -235,8 +235,8 @@ footer {
 <!-- Navegación -->
 <nav>
   <a href="inicio.html" class="btn-main">Inicio</a>
-  <a href="https://neexgo.es" class="btn-main">Peliculas</a>
-  <a href="https://5900.tv/category/vivo/television" target="_blank" class="btn-main">TV En Vivo</a>
+  <a href="https://www.cuevana.is/" class="btn-main">Peliculas</a>
+  <a href="404---- en mantenimiento - lozano " target="_blank" class="btn-main">TV En Vivo</a>
   <a href="https://wa.me/906308439?text=Hola%2C%20quiero%20más%20información." target="_blank" class="btn-main">Contacto</a>
   <a href="#" class="btn-main" onclick="cerrarSesion()">Salir</a>
 </nav>
@@ -249,7 +249,7 @@ footer {
   <div class="hero-text">
     <h2>Bienvenido al fútbol en vivo</h2>
     <p>Consulta partidos, equipos en tiempo real.</p>
-    <a href="https://streamtp11.com/eventos.html" class="btn-ver-mas">Ver más</a>
+    <a href="https://streamtpcloud.com/eventos.html" class="btn-ver-mas">Ver más</a>
   </div>
   <div class="hero-img">
     <img src="001.jpeg" alt="Fútbol" />
@@ -301,3 +301,4 @@ function toggleMenu() {
 
 </body>
 </html>
+
